--- a/src/pages/item/item.scss
+++ b/src/pages/item/item.scss
@@ -16,5 +16,32 @@ ion-input {
     margin-top: 2.5em;
 }
 #itemList{
-    margin-top: 3em;
+    margin-top: 4em;
 }
+#deleteButton{
+background-color: red;
+color: white;
+border-radius: 17px;
+margin-right: 5px;
+height: 2em;
+width: 4em;
+font-size: 15px;
+margin-top: 4px;
+}
+#editButton{
+background-color: lightgreen;
+color: black;
+border-radius: 17px;
+height: 2em;
+width: 4em;
+font-size: 15px;
+margin-top: 4px;
+}
+
+.alert-head {
+    background-color: skyblue;
+    color: white;
+    height: 4em;
+  }
+  
+  
