--- a/src/pages/mart/mart.scss
+++ b/src/pages/mart/mart.scss
@@ -1,3 +1,33 @@
 page-mart {
 
 }
+
+#inpbox{
+    margin-top: 2em;
+    
+}
+#btn{
+    margin-top: 2.5em;
+}
+#itemList{
+    margin-top: 4em;
+}
+#deleteButton{
+background-color: red;
+color: white;
+border-radius: 17px;
+margin-right: 5px;
+height: 2em;
+width: 4em;
+font-size: 15px;
+margin-top: 4px;
+}
+#editButton{
+background-color: lightgreen;
+color: black;
+border-radius: 17px;
+height: 2em;
+width: 4em;
+font-size: 15px;
+margin-top: 4px;
+}
