itemModal: item Add,edit; item delete; Mart Insert; ItemSearch Pipe

--- a/src/pages/item/item.scss
+++ b/src/pages/item/item.scss
@@ -10,11 +10,12 @@ ion-input {
 }
 #inpbox{
     margin-top: 2em;
-    
 }
-#btn{
-    margin-top: 2.5em;
+
+#addItemButton{
+      margin-bottom: 5em;
 }
+
 #itemList{
     margin-top: 4em;
 }
