--- a/src/pages/mart/mart.scss
+++ b/src/pages/mart/mart.scss
@@ -1,6 +1,6 @@
 page-mart {
 
-}
+
 
 #inpbox{
     margin-top: 2em;
@@ -9,7 +9,7 @@ page-mart {
 #btn{
     margin-top: 2.5em;
 }
-#itemList{
+#martList{
     margin-top: 4em;
 }
 #deleteButton{
@@ -30,4 +30,5 @@ height: 2em;
 width: 4em;
 font-size: 15px;
 margin-top: 4px;
+}
 }
