--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -80,6 +80,9 @@ $colors: (
 
 @import "ionic.ionicons";
 
+$item-md-detail-push-show: true;
+$item-wp-detail-push-show: true;
+
 
 // Fonts
 // --------------------------------------------------
